--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -101,9 +101,10 @@ $(CPROC_DIR)/config.h:
 	@echo 'static const char *const endfiles[] = {NULL};' >> $@
 
 $(CPROC_DIR)/cproc-qbe: $(CPROC_DIR)/config.h
+# Only build cproc-qbe (not cproc driver which uses POSIX spawn.h)
 # cproc Makefile uses 'c99' which doesn't exist on MSYS2/Windows
 # Use 'cc -std=c99' instead (works on all platforms)
-	$(MAKE) -C $(CPROC_DIR) CC="cc -std=c99"
+	$(MAKE) -C $(CPROC_DIR) CC="cc -std=c99" cproc-qbe
 
 cc65816-clean:
 	$(MAKE) -C $(QBE_DIR) clean
