--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,9 @@ linkfile
 # macOS
 .DS_Store
 
-# Claude Code local settings
-.claude/settings.local.json
+# Claude Code (not part of the project)
+CLAUDE.md
+.claude/
 
 # Build directories
 build/
