--- a/examples/audio/1_tone/Makefile
+++ b/examples/audio/1_tone/Makefile
@@ -1,15 +1,14 @@
-# TADA Sound Example
-# Plays TADA sample using the SPC700 DSP
+# Tone Generator Example
+# Generates a simple tone using the SPC700 DSP
 
 OPENSNES := $(shell cd ../../.. && pwd)
 
 # ROM Configuration
 TARGET   := tone.sfc
-ROM_NAME := OPENSNES TADA
+ROM_NAME := OPENSNES TONE
 
 # Source files
 CSRC     := main.c
-ASMSRC   := spc.asm data.asm
 
 # Include shared build rules
 include $(OPENSNES)/make/common.mk
